Fix T68009: Recognize X.Org/AMD as GPU_DEVICE_ATI and open source driver

Reviewed By: #gpu_viewport, fclem

Differential Revision: https://developer.blender.org/D5392